[package]
name = "eq-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "FTS EQ — CLAP/VST3 audio plugin entry point"

[lib]
crate-type = ["cdylib"]

[dependencies]
fts-plugin-core = { path = "../../fts-plugin-core" }
eq-dsp = { path = "../eq-dsp" }
eq-profiles = { path = "../eq-profiles" }
eq-ui = { path = "../eq-ui" }
nih_plug = { workspace = true }
