[package]
name = "eq-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "FTS EQ — CLAP/VST3 audio plugin entry point"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
audio-gui = { workspace = true }
fts-plugin-core = { path = "../../fts-plugin-core" }
eq-pro-dsp = { path = "../eq-pro-dsp" }
eq-profiles = { path = "../eq-profiles" }
eq-ui = { path = "../eq-ui" }
fts-dsp = { workspace = true }
nih_plug = { workspace = true }
atomic_float = { workspace = true }
rustfft = "6"
