[package]
name = "gate-dsp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Noise gate processing engine — zero-crossing-aware gating with hysteresis, lookahead, and sidechain filtering"

[dependencies]
fts-dsp = { path = "../../fts-dsp" }
eq-dsp = { path = "../../fts-eq/eq-dsp" }
