[package]
name = "gate-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "FTS Gate — CLAP/VST3 audio plugin entry point"

[lib]
crate-type = ["cdylib"]

[dependencies]
fts-plugin-core = { path = "../../fts-plugin-core" }
gate-dsp = { path = "../gate-dsp" }
gate-profiles = { path = "../gate-profiles" }
gate-ui = { path = "../gate-ui" }
nih_plug = { workspace = true }
