[package]
name = "gate-ui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Noise gate GUI — threshold display, gain reduction meter, open/close indicator"

[dependencies]
audio-gui = { workspace = true }
fts-plugin-core = { path = "../../fts-plugin-core" }
gate-dsp = { path = "../gate-dsp" }
gate-profiles = { path = "../gate-profiles" }
