[package]
name = "limiter-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "FTS Limiter — CLAP/VST3 audio plugin entry point"

[lib]
crate-type = ["cdylib"]

[dependencies]
fts-plugin-core = { path = "../../fts-plugin-core" }
limiter-dsp = { path = "../limiter-dsp" }
limiter-profiles = { path = "../limiter-profiles" }
limiter-ui = { path = "../limiter-ui" }
nih_plug = { workspace = true }
